# target-google-business

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
target_google_business/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
